<resources>
    <string name="app_name">task3a</string>
    <string name="switch_text">Use ViewModel</string>
    <string name="counter_text">0</string>
    <string name="counter_button_text">INCREASE COUNTER</string>
    <string name="main_button_guess">Counter</string>
    <string name="main_button_number_guess">Number Guess</string>
    <string name="number_guess_letter">C</string>
    <string name="guess_result_try_again">TEKRAR DENE</string>
    <string name="guess_result_win">KAZANDIN!</string>
    <string name="text_clear">Clear</string>
    <string name="text_guess">Guess</string>
</resources>