<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.GuessFragment">

    <TextView
        android:id="@+id/textViewLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_guess_letter"
        android:textSize="@dimen/text_size_xlarge"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewResult"
        app:layout_constraintVertical_bias="0.5" />
    
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_result_try_again"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gridButtons"/>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padding_medium">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="1"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="2"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="3"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="4"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="5"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="6"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="7"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="8"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="9"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="@string/text_clear"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="0"
            android:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/buttonGuess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="@string/text_guess"
            android:backgroundTint="@color/purple_500" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>